Colaboratory를 통해 생성됨

--- a/백준_문제풀이.ipynb
+++ b/백준_문제풀이.ipynb
@@ -8,6 +8,7 @@
       "collapsed_sections": [
         "POAYGCfMe_0s",
         "5PRfloDZHGiN",
+        "hd-9cFVbd81N",
         "Cdc6oGAHJ5wv",
         "jnw0s22-J5zm",
         "hHXqsq9RJ52V",
@@ -18,9 +19,14 @@
         "n12SANb4ewi1",
         "Sn6GYlulJ5rI",
         "zvtcqUZyJ5uA",
-        "RVUMmYudeX57"
+        "2H2UiCRZJ55E",
+        "8aEgFHzQTU-M",
+        "x3MW5qqtTZAn",
+        "NZwKoUdcTbp-",
+        "L635P9aDR41L",
+        "wBFPqXNuR8ne"
       ],
-      "authorship_tag": "ABX9TyMgslsp1g/y1EtldoJorOST",
+      "authorship_tag": "ABX9TyPWiCmbFI8Z0ijc+X+370sK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +45,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/tjy2202/Home/blob/master/%EB%B0%B1%EC%A4%80_%EB%AC%B8%EC%A0%9C%ED%92%80%EC%9D%B4.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/tjy2202/Problem_Solving/blob/master/%EB%B0%B1%EC%A4%80_%EB%AC%B8%EC%A0%9C%ED%92%80%EC%9D%B4.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -725,13 +731,385 @@
         "id": "2H2UiCRZJ55E"
       },
       "source": [
+        "#### 11654번 : 아스키 코드"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ncXONLViJ55F",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8dd5c575-edf8-4164-bd36-df7f53f4ba1c"
+      },
+      "source": [
+        "a = input()\n",
+        "\n",
+        "print(ord(a))"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0\n",
+            "48\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8aEgFHzQTU-M"
+      },
+      "source": [
+        "#### 11720번"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SzIpF42sTU-V",
+        "outputId": "2095ae16-6c19-4713-e768-677261ba9094"
+      },
+      "source": [
+        "n = int(input())\n",
+        "x = input()\n",
+        "sum = 0\n",
+        "for i in range(n):\n",
+        "  sum += int(x[i])\n",
+        "print(sum)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "5\n",
+            "54321\n",
+            "15\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "x3MW5qqtTZAn"
+      },
+      "source": [
+        "#### 10809번"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "H-wdIfagTZAo",
+        "outputId": "6738b920-f646-4752-c98a-85378188ff40"
+      },
+      "source": [
+        "s = input()\n",
+        "x = 'abcdefghijklmnopqrstuvwxyz'\n",
+        "\n",
+        "for i in range(len(x)):\n",
+        "  a = 0\n",
+        "  for j in range(len(s)):\n",
+        "    if s[j] == x[i]:\n",
+        "      a = j\n",
+        "      break\n",
+        "    else:\n",
+        "      a = -1\n",
+        "\n",
+        "  print(a, end=' ')"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "baekjoon\n",
+            "1 0 -1 -1 2 -1 -1 -1 -1 4 3 -1 -1 7 5 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 -1 "
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "NZwKoUdcTbp-"
+      },
+      "source": [
+        "#### 2675번"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "DLdAQuq-Tbp_",
+        "outputId": "2870c73e-612a-4eed-c993-5906e9cd9a02"
+      },
+      "source": [
+        "n = int(input())\n",
+        "for _ in range(n):\n",
+        "  a, b = input().split()\n",
+        "  a = int(a)\n",
+        "  b = str(b)\n",
+        "  res = ''\n",
+        "  for i in range(len(b)):\n",
+        "    res += b[i] * a\n",
+        "  print(res)\n"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2\n",
+            "3 ABC\n",
+            "AAABBBCCC\n",
+            "5 /HTP\n",
+            "/////HHHHHTTTTTPPPPP\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZGJGxU4LTcWc"
+      },
+      "source": [
+        "#### 1157번"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XH-yq9CxTcWc",
+        "outputId": "38fa62d9-18c1-40f7-f33e-606b502b3ab0"
+      },
+      "source": [
+        "s = input().lower()\n",
+        "\n",
+        "c = ' '.join(s)\n",
+        "a = set(c.split())\n",
+        "a = list(a)\n",
+        "b = []\n",
+        "for i in a:\n",
+        "  b.append(s.count(i))\n",
+        "\n",
+        "b.sort()\n",
+        "\n",
+        "if len(b) == 1:\n",
+        "  print(a[0].upper())\n",
+        "else:\n",
+        "  if b[-1] == b[-2]:\n",
+        "    print('?')\n",
+        "  else:  \n",
+        "    x = b[-1]\n",
+        "    for i in a:\n",
+        "      if s.count(i) == x:\n",
+        "        print(i.upper())\n"
+      ],
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "a\n",
+            "A\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "_bivMt1sTchd"
+      },
+      "source": [
+        "#### 1152번"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UjteJxLoTchd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a4f9382c-1fe5-4206-abba-f8cdc36c7760"
+      },
+      "source": [
+        "s = input().strip().lower().split(' ')\n",
+        "\n",
+        "if (len(s) == 1) & (s[0] == ''):\n",
+        "  print(0)\n",
+        "else:\n",
+        "  print(len(s))"
+      ],
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            " \n",
+            "0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "UlRjxI8VTcoB"
+      },
+      "source": [
         "#### 1"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ncXONLViJ55F"
+        "id": "gVtfJkBNTcoB"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FCPITXGwTcsi"
+      },
+      "source": [
+        "#### 1"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XfvDdcKzTcsi"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "M75SACDgTcxe"
+      },
+      "source": [
+        "#### 1"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SIUj9OKiTcxf"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "aE-p8rLrTc2U"
+      },
+      "source": [
+        "#### 1"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "L5687equTc2U"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "L635P9aDR41L"
+      },
+      "source": [
+        "### **8단계 : 기본수학1===========**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "d5l3XgZ3R41L"
+      },
+      "source": [
+        "#### 1"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IbvFoejTR41L"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wBFPqXNuR8ne"
+      },
+      "source": [
+        "### **9단계 : 기본수학2===========**"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "JjxDErpjR8ne"
+      },
+      "source": [
+        "#### 1"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "85Nt6C8WR8ne"
       },
       "source": [
         ""
