Colaboratory를 통해 생성됨

--- a/백준_문제풀이.ipynb
+++ b/백준_문제풀이.ipynb
@@ -23,10 +23,18 @@
         "8aEgFHzQTU-M",
         "x3MW5qqtTZAn",
         "NZwKoUdcTbp-",
-        "L635P9aDR41L",
+        "ZGJGxU4LTcWc",
+        "_bivMt1sTchd",
+        "UlRjxI8VTcoB",
+        "FCPITXGwTcsi",
+        "M75SACDgTcxe",
+        "aE-p8rLrTc2U",
+        "d5l3XgZ3R41L",
+        "KrC88VwzOnqU",
+        "RU2opUjqOnym",
         "wBFPqXNuR8ne"
       ],
-      "authorship_tag": "ABX9TyPWiCmbFI8Z0ijc+X+370sK",
+      "authorship_tag": "ABX9TyOnpA/wRK6e5CeUPM+Xcfi/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -929,7 +937,7 @@
         "      if s.count(i) == x:\n",
         "        print(i.upper())\n"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -967,7 +975,7 @@
         "else:\n",
         "  print(len(s))"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -985,19 +993,42 @@
         "id": "UlRjxI8VTcoB"
       },
       "source": [
-        "#### 1"
+        "#### 2908번"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "gVtfJkBNTcoB"
+        "id": "gVtfJkBNTcoB",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "fd4c207b-0d58-46ed-f47c-7564f2be5392"
       },
       "source": [
-        ""
+        "s = list(map(str, input().split()))\n",
+        "t = []\n",
+        "x = 0\n",
+        "for i in s:\n",
+        "  x = i[-1] + i[-2] + i[-3]\n",
+        "  t.append(int(x))\n",
+        "\n",
+        "if t[0] > t[1]:\n",
+        "  print(t[0])\n",
+        "else:\n",
+        "  print(t[1])"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "221 231\n",
+            "132\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1005,19 +1036,53 @@
         "id": "FCPITXGwTcsi"
       },
       "source": [
-        "#### 1"
+        "#### 5622번"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "XfvDdcKzTcsi"
+        "id": "XfvDdcKzTcsi",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "95a6d87e-ece1-47c0-f702-269b8227e32f"
       },
       "source": [
-        ""
+        "s = input().lower()\n",
+        "t = 0\n",
+        "\n",
+        "for i in range(len(s)):\n",
+        "  if ord(s[i]) <= ord('c'):\n",
+        "    t += 3\n",
+        "  elif ord(s[i]) <= ord('f'):\n",
+        "    t += 4\n",
+        "  elif ord(s[i]) <= ord('i'):\n",
+        "    t += 5\n",
+        "  elif ord(s[i]) <= ord('l'):\n",
+        "    t += 6\n",
+        "  elif ord(s[i]) <= ord('o'):\n",
+        "    t += 7\n",
+        "  elif ord(s[i]) <= ord('s'):\n",
+        "    t += 8\n",
+        "  elif ord(s[i]) <= ord('v'):\n",
+        "    t += 9\n",
+        "  elif ord(s[i]) <= ord('z'):\n",
+        "    t += 10\n",
+        "\n",
+        "print(t)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "UNUCIC\n",
+            "36\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1025,19 +1090,48 @@
         "id": "M75SACDgTcxe"
       },
       "source": [
-        "#### 1"
+        "#### 2941번"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SIUj9OKiTcxf"
+        "id": "SIUj9OKiTcxf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "481de575-f3da-4d62-efee-add587388507"
       },
       "source": [
-        ""
+        "c = input()\n",
+        "s = ['c=','c-','d-','lj','nj','s=','z=']\n",
+        "res = len(c)\n",
+        "\n",
+        "for i in range(len(c) - 1):\n",
+        "  if (c[i] + c[i+1]) in s:\n",
+        "    res -= 1\n",
+        "  else:\n",
+        "    pass\n",
+        "\n",
+        "for i in range(len(c) - 2):\n",
+        "  if (c[i] + c[i+1] + c[i+2]) == 'dz=':\n",
+        "    res -= 1\n",
+        "  else:\n",
+        "    pass\n",
+        "\n",
+        "print(res)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "c=c=\n",
+            "2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1045,19 +1139,54 @@
         "id": "aE-p8rLrTc2U"
       },
       "source": [
-        "#### 1"
+        "#### 1316번"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "L5687equTc2U"
+        "id": "L5687equTc2U",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "8f56178d-fb4b-4b05-ce36-25df3e81d138"
       },
       "source": [
-        ""
+        "n = int(input())\n",
+        "res= 0\n",
+        "for _ in range(n):\n",
+        "  s = input()\n",
+        "  s = ' '.join(s)\n",
+        "  s = s.split()\n",
+        "  s.append(' ')\n",
+        "  x = []\n",
+        "  for i in range(len(s) - 1):\n",
+        "    if s[i] != s[i+1]:\n",
+        "      x.append(s[i])\n",
+        "    else:\n",
+        "      continue\n",
+        "  if len(x) != len(set(x)):\n",
+        "    pass\n",
+        "  else:\n",
+        "    res += 1\n",
+        "\n",
+        "print(res)"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "4\n",
+            "aba\n",
+            "abab\n",
+            "abcabc\n",
+            "a\n",
+            "1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1074,13 +1203,389 @@
         "id": "d5l3XgZ3R41L"
       },
       "source": [
+        "#### 1712번"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IbvFoejTR41L",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f2652f4b-8afc-4c74-b973-eb5ccdc46ca5"
+      },
+      "source": [
+        "x = input().split()\n",
+        "a, b, c = int(x[0]), int(x[1]), int(x[2])\n",
+        "n = 0\n",
+        "\n",
+        "if (c - b) > 0:\n",
+        "\n",
+        "  n = int(a / (c-b)) + 1\n",
+        "  print(n)\n",
+        "  \n",
+        "else:\n",
+        "  print(-1)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "3 2 1\n",
+            "-1\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KrC88VwzOnqU"
+      },
+      "source": [
+        "#### 2292번"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vcKt0_t_Onqa",
+        "outputId": "80bb8aeb-4021-4519-bdb8-6a56bc3794c0"
+      },
+      "source": [
+        "n = int(input())\n",
+        "x = 1\n",
+        "y = 6\n",
+        "res = 1\n",
+        "while True:\n",
+        "  if n == 1:\n",
+        "    break\n",
+        "  elif n > x:\n",
+        "    res += 1  \n",
+        "  else:\n",
+        "    break\n",
+        "  x += 6 * (res - 1)\n",
+        "\n",
+        "print(res)"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "13\n",
+            "7\n",
+            "19\n",
+            "3\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RU2opUjqOnym"
+      },
+      "source": [
+        "#### 1193번"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TGsLqwQmOnyn",
+        "outputId": "8c0a011b-33c5-4bf2-9b40-10ad3d39de0b"
+      },
+      "source": [
+        "n = int(input())\n",
+        "a = 0\n",
+        "sum = 0\n",
+        "while True:\n",
+        "  if n > sum:\n",
+        "    a += 1\n",
+        "    sum += a\n",
+        "  else:\n",
+        "    break\n",
+        "\n",
+        "x = n - sum + a #16 - 21 + 6 1\n",
+        "\n",
+        "if a % 2 == 0:\n",
+        "  print('{0}/{1}'.format( x, a +1 - x))\n",
+        "else:\n",
+        "  print('{0}/{1}'.format( a +1 - x, x))"
+      ],
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "5\n",
+            "2/2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EwqY3vd9OoDo"
+      },
+      "source": [
+        "#### 2869번 : 달팽이는 올라가고 싶다(수학 계산 어렵..)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1l2hxETQOoDo",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "136e43cc-55b4-475d-adaa-dbe33b685893"
+      },
+      "source": [
+        "s = input().split()\n",
+        "a, b, v = int(s[0]), int(s[1]), int(s[2])\n",
+        "\n",
+        "n = 0\n",
+        "x = v - a\n",
+        "y = (a - b)\n",
+        "\n",
+        "if a >= v:\n",
+        "  n = 1\n",
+        "else:\n",
+        "  if y * (x // y) >= x: \n",
+        "    n = (x // y) + 1\n",
+        "  else:\n",
+        "    n = (x // y) + 2\n",
+        "    \n",
+        "\n",
+        "print(n)\n"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "100 99 1000000000\n",
+            "999999901\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "KkBtDD2GOoHJ"
+      },
+      "source": [
+        "#### 10250번 : ACM호텔"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "c_ZZ_GnROoHJ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "0b319c5a-a43d-44ff-aab7-52f006f1eadf"
+      },
+      "source": [
+        "n = int(input())\n",
+        "for _ in range(n):\n",
+        "  h, w, n = map(int, input().split())\n",
+        "  x = (n // h) + 1 #n_w\n",
+        "  y = n % h #n_h\n",
+        "  if y == 0:\n",
+        "    y = str(h)\n",
+        "    x = x - 1\n",
+        "  else:\n",
+        "    y = str(y)\n",
+        "  \n",
+        "  if x < 10:\n",
+        "    x = '0' + str(x)\n",
+        "  else:\n",
+        "    x = str(x)\n",
+        "\n",
+        "  print(y + x)"
+      ],
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2\n",
+            "6 12 10\n",
+            "402\n",
+            "30 50 72\n",
+            "1203\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "sew12iTLOoKx"
+      },
+      "source": [
+        "#### 2775번 : copy() 사용 안하면 x가 안변함 ?? 왜??"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YtBUbt3VOoKy",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "745a8d57-cc62-466d-9937-7e897a146296"
+      },
+      "source": [
+        "r = int(input())\n",
+        "y = [1,2,3,4,5,6,7,8,9,10,11,12,13,14]\n",
+        "\n",
+        "for _ in range(r):\n",
+        "  k = int(input())\n",
+        "  n = int(input())\n",
+        "  x = y.copy() #copy() 사용 안하면 x가 안변함 ?? 왜??\n",
+        "\n",
+        "  for z in range(k):\n",
+        "    sum = 0\n",
+        "    \n",
+        "    for i in range(n):\n",
+        "      sum += x[i]\n",
+        "      x[i] = sum\n",
+        "\n",
+        "  print(x[n-1])\n"
+      ],
+      "execution_count": 88,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "2\n",
+            "1\n",
+            "3\n",
+            "6\n",
+            "2\n",
+            "3\n",
+            "10\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZZX1EwaLOoXw"
+      },
+      "source": [
+        "#### 2839번"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "aT1j9piIOoXx",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "251b9c74-213b-4ccb-9fdc-db1694709f1c"
+      },
+      "source": [
+        "n = int(input())\n",
+        "a = n // 5\n",
+        "\n",
+        "while True:\n",
+        "  x = n - a * 5\n",
+        "\n",
+        "  if x % 3 == 0:\n",
+        "    print(a + (x // 3))\n",
+        "    break\n",
+        "  else:\n",
+        "    if a == 0:\n",
+        "      print(-1)\n",
+        "      break\n",
+        "    else:\n",
+        "      a -= 1\n",
+        "  \n",
+        "  if x <= 0:\n",
+        "    print(-1)\n",
+        "    break"
+      ],
+      "execution_count": 102,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "18\n",
+            "4\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uwtGS2Q4Ooaz"
+      },
+      "source": [
         "#### 1"
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "IbvFoejTR41L"
+        "id": "2LTSi1r1Ooaz",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7b7af3ae-d85d-4a60-8448-e2ea9f448c49"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 86,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "L2bGuKUUOoeb"
+      },
+      "source": [
+        "#### 1"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "clQ9lSGiOoeb"
       },
       "source": [
         ""
