Colaboratory를 통해 생성됨

--- a/백준_문제풀이.ipynb
+++ b/백준_문제풀이.ipynb
@@ -103,7 +103,7 @@
         "XK9REonP1NwI",
         "71RWUsr01OEe"
       ],
-      "authorship_tag": "ABX9TyO0JsHwzKS0aermAT6PdMFi",
+      "authorship_tag": "ABX9TyPlZ795trcYhw0RFnL/5uyj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5036,6 +5036,51 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "CO66sh-WEVOS"
+      },
+      "source": [
+        "####  2609번"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Bx3H9RwoEVOS"
+      },
+      "source": [
+        "a, b = map(int, input().split())\n",
+        "l = []\n",
+        "if a > b:\n",
+        "    c = a\n",
+        "    a = b\n",
+        "    b = c\n",
+        "\n",
+        "while True:\n",
+        "    h = 0\n",
+        "    if a > 1:\n",
+        "        for i in range(2, a + 1):\n",
+        "            if a % i == 0 and b % i == 0:\n",
+        "                h = 1\n",
+        "                l.append(i)\n",
+        "                a = a // i\n",
+        "                b = b // i\n",
+        "                break\n",
+        "    if h == 0:\n",
+        "        break\n",
+        "\n",
+        "t = 1\n",
+        "for i in l:\n",
+        "    t *= i\n",
+        "\n",
+        "print(t)\n",
+        "print(t * a * b)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "9oUY6nyKG5Cy"
       },
       "source": [
@@ -5069,6 +5114,66 @@
       "cell_type": "code",
       "metadata": {
         "id": "whAG1Q4rG5Fq"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QD5eQtFaEU3c"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NQoMJgayEU3d"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cYhC8xLCEU6x"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_2RUxuRjEU6x"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "yx3yQcgXEU9t"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XhpJgKK8EU9u"
       },
       "source": [
         ""
