Colaboratory를 통해 생성됨

--- a/백준_문제풀이.ipynb
+++ b/백준_문제풀이.ipynb
@@ -6,7 +6,17 @@
       "name": "백준 문제풀이.ipynb",
       "provenance": [],
       "collapsed_sections": [
+        "oqZ3i95jWOSr",
+        "WzwUHBI4pjsC",
+        "n-jLje1Epjv5",
+        "kg3C85P2pkCh",
+        "sDfe3I8SCSLS",
+        "LWZV-DNlCUci",
+        "JzrdqUwXCVly",
+        "9IktNkNQGUUH",
         "VOaWDLwIWXJf",
+        "HNMURhhYKntw",
+        "Zfx8md_duDzl",
         "POAYGCfMe_0s",
         "SwNOozo2J2Qk",
         "4KG0dQ5_J5k_",
@@ -100,17 +110,20 @@
         "lyIsmhkY-qrN",
         "UVqfa0yg-qu8",
         "5DWMXnz5-qyx",
+        "hsMNobW4-gJP",
         "Np0R9kLF-gJi",
         "wfcJmLEqpU6T",
         "Hc6V32u4pVUa",
         "pNoCqLvepVX5",
+        "PPg8gdeSpVbw",
         "xKIhI97D1Ns-",
         "JLA5o1_kG4_y",
         "CO66sh-WEVOS",
+        "pRqth93HG5Fp",
         "XK9REonP1NwI",
         "71RWUsr01OEe"
       ],
-      "authorship_tag": "ABX9TyOY8EEIohzIjw2ElXiQ/Aq2",
+      "authorship_tag": "ABX9TyNIGABnGWGs6gyWlF6p6uZ9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4874,34 +4887,30 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pyq3CYn2pVbx",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "64ff8f87-099c-47b8-93ac-c08a18941b5c"
+        "id": "pyq3CYn2pVbx"
       },
       "source": [
-        "n = int(input())\n",
-        "length = list(map(int, input().split()))\n",
-        "cost = list(map(int, input().split()))\n",
-        "min_cost = 0\n",
+        "import sys\n",
         "\n",
+        "n = int(sys.stdin.readline())\n",
+        "length = list(map(int, sys.stdin.readline().split()))\n",
+        "cost = list(map(int, sys.stdin.readline().split()))\n",
         "\n",
-        "\n"
+        "min_cost = cost[0]\n",
+        "sum_length = 0\n",
+        "result = 0\n",
+        "\n",
+        "for i in range(len(length)):\n",
+        "    if cost[i] < min_cost:\n",
+        "        min_cost = cost[i]\n",
+        "        result += length[i] * cost[i]\n",
+        "    else:\n",
+        "        result += length[i] * min_cost\n",
+        "\n",
+        "print(result)"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "1196.0"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 4
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
