Colaboratory를 통해 생성됨

--- a/백준_문제풀이.ipynb
+++ b/백준_문제풀이.ipynb
@@ -116,14 +116,11 @@
         "Hc6V32u4pVUa",
         "pNoCqLvepVX5",
         "PPg8gdeSpVbw",
-        "xKIhI97D1Ns-",
-        "JLA5o1_kG4_y",
-        "CO66sh-WEVOS",
-        "pRqth93HG5Fp",
+        "cYhC8xLCEU6x",
         "XK9REonP1NwI",
         "71RWUsr01OEe"
       ],
-      "authorship_tag": "ABX9TyNIGABnGWGs6gyWlF6p6uZ9",
+      "authorship_tag": "ABX9TyN5l+pbq8JgElenbtTaUihG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5035,7 +5032,7 @@
         "id": "whAG1Q4rG5Fq"
       },
       "source": [
-        "#유클링드 호제법\n",
+        "#유클리드 호제법\n",
         "n = int(input())\n",
         "for _ in range(n):\n",
         "    a, b = map(int, input().split())\n",
@@ -5056,6 +5053,104 @@
         "        c = x\n",
         "\n",
         "    print(int((b * a) / min))"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QD5eQtFaEU3c"
+      },
+      "source": [
+        "####  2981번"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NQoMJgayEU3d"
+      },
+      "source": [
+        "#유클리드 호제법\n",
+        "# G(a,b) = G(b,r), a = bq + r(q는 몫, r은 나머지)\n",
+        "\n",
+        "import sys\n",
+        "\n",
+        "def f(a,b):\n",
+        "    while b != 0:\n",
+        "        a, b = b, a % b\n",
+        "    return a\n",
+        "\n",
+        "n = int(sys.stdin.readline())\n",
+        "\n",
+        "l = []\n",
+        "for i in range(n):\n",
+        "    l.append(int(sys.stdin.readline()))\n",
+        "l.sort()\n",
+        "\n",
+        "t = l[1] - l[0]\n",
+        "for i in range(2,n):\n",
+        "    t = f(t, l[i] - l[i-1])\n",
+        "\n",
+        "result = []\n",
+        "\n",
+        "for i in range(1,int(t**0.5)+1): #약수구할때\n",
+        "    if t % i == 0:\n",
+        "        result.append(i)\n",
+        "        if i == t // i:\n",
+        "            continue\n",
+        "        result.append(t // i)\n",
+        "\n",
+        "result.sort()\n",
+        "result.remove(1)\n",
+        "print(*result)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cYhC8xLCEU6x"
+      },
+      "source": [
+        "####  3036번"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_2RUxuRjEU6x"
+      },
+      "source": [
+        "def f(x):\n",
+        "    return 2 * int(x)\n",
+        "\n",
+        "def t(a,b):\n",
+        "    if a < b:\n",
+        "        c = a\n",
+        "        a = b\n",
+        "        b = c\n",
+        "\n",
+        "    while b != 0:\n",
+        "        a, b = b, a % b\n",
+        "\n",
+        "    return a\n",
+        "\n",
+        "n = int(input())\n",
+        "l = list(map(f, input().split()))\n",
+        "\n",
+        "for i in range(1,n):\n",
+        "    if l[0] % l[i] == 0:\n",
+        "        a = l[0]//l[i]\n",
+        "        b = 1\n",
+        "    else:\n",
+        "        x = t(l[0], l[i])\n",
+        "        a = int(l[0] / x)\n",
+        "        b = int(l[i] / x)\n",
+        "\n",
+        "    print('{0}/{1}'.format(a, b))"
       ],
       "execution_count": null,
       "outputs": []
@@ -5086,46 +5181,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "QD5eQtFaEU3c"
-      },
-      "source": [
-        "#### "
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "NQoMJgayEU3d"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "cYhC8xLCEU6x"
-      },
-      "source": [
-        "#### "
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "_2RUxuRjEU6x"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "yx3yQcgXEU9t"
       },
       "source": [
@@ -5136,6 +5191,86 @@
       "cell_type": "code",
       "metadata": {
         "id": "XhpJgKK8EU9u"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gPapbiVAbmMj"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "RAW8FwdPbmMj"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "O-ZSdkmYbmRa"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2EJIUiJ5bmRa"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ixkMO17DbmWw"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eGuzj_tGbmWx"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "u9tipfTwbmbn"
+      },
+      "source": [
+        "#### "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6fVE6o2bbmbn"
       },
       "source": [
         ""
