Colaboratory를 통해 생성됨

--- a/[BOJ]백준_단계별_문제풀이.ipynb
+++ b/[BOJ]백준_단계별_문제풀이.ipynb
@@ -120,7 +120,7 @@
         "XK9REonP1NwI",
         "71RWUsr01OEe"
       ],
-      "authorship_tag": "ABX9TyOExJK33ZCvQWMQbVXh1W8h",
+      "authorship_tag": "ABX9TyO8LATbmUNpa2ciBxwGcUQ+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5203,7 +5203,7 @@
         "\n",
         "print((math.factorial(n) // (math.factorial(n-k) * math.factorial(k))) % 10007)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5281,7 +5281,7 @@
         "id": "ixkMO17DbmWw"
       },
       "source": [
-        "#### "
+        "####  1676번"
       ]
     },
     {
@@ -5291,22 +5291,33 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "52833308-3b83-4fa3-8aa3-eab760d22208"
+        "outputId": "e191ffe9-ed85-4bfb-a1d8-ae616d4e3736"
       },
       "source": [
-        ""
+        "n = int(input())\n",
+        "\n",
+        "import math\n",
+        "\n",
+        "l = str(math.factorial(n))\n",
+        "\n",
+        "res = 0\n",
+        "for i in range(-1, -len(l)-1,-1):\n",
+        "    if l[i] == '0':\n",
+        "        res += 1\n",
+        "    else:\n",
+        "        break\n",
+        "\n",
+        "print(res)"
       ],
-      "execution_count": 8,
+      "execution_count": 4,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "5"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 8
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n",
+            "0\n"
+          ]
         }
       ]
     },
@@ -5316,7 +5327,7 @@
         "id": "u9tipfTwbmbn"
       },
       "source": [
-        "#### "
+        "####  2004번"
       ]
     },
     {
@@ -5325,7 +5336,27 @@
         "id": "6fVE6o2bbmbn"
       },
       "source": [
-        ""
+        "# 2,5 를 찾는 방법\n",
+        "import math\n",
+        "\n",
+        "n, m = map(int, input().split())\n",
+        "\n",
+        "def cnt2(n):\n",
+        "    count = 0\n",
+        "    while n:\n",
+        "        n //= 2\n",
+        "        count += n\n",
+        "    return count\n",
+        "\n",
+        "def cnt5(n):\n",
+        "    count = 0\n",
+        "    while n:\n",
+        "        n //= 5\n",
+        "        count += n\n",
+        "    return count\n",
+        "\n",
+        "l = [cnt2(n) - (cnt2(n-m) + cnt2(m)), cnt5(n) - (cnt5(n-m) + cnt5(m))]\n",
+        "print(min(l))"
       ],
       "execution_count": null,
       "outputs": []
